# MH

./: CMakeLists.txt  main.cpp  test_greedy.cpp  test_localsearch.cpp  test_mdd.cpp  test_random.cpp
common/: problem.h  solution.h  timer.h
inc/: greedymdd.h  localsearchmdd.h  problemmdd.h  randomsearchmdd.h
src/: greedymdd.cpp  localsearchmdd.cpp  problemmdd.cpp  randomsearchmdd.cpp
